# imgui-c3

./: LICENSE.md  README.md  build-example.sh  build-examples.sh  build-libs.sh  generate-imgui.sh
.github/workflows/: build.yml
example/: main.c3
examples/: file_dialog_example.c3  plot_example.c3
imgui-generator/: generator.c3
imgui.c3l/: filedialog.c3  imgui.c3  implot.c3  manifest.json
libs/: CMakeLists.txt
libs/cimgui/: cimgui.h
libs/filedialog/: ImGuiFileDialogConfig.h
libs/sokol/: sokol.c  sokol_imgui.h
sokol.c3l/: manifest.json  sapp.c3  saudio.c3  sdtx.c3  sg.c3  sgl.c3  sglue.c3  simgui.c3  slog.c3  sshape.c3  stm.c3
